test/integration/bad/lang/incomplete3.stan
transformed data {
  2.0 %/% while (1) { print("hi"); }
}